--- a/P137Pronia/Views/Shared/_ProductPartial.cshtml
+++ b/P137Pronia/Views/Shared/_ProductPartial.cshtml
@@ -1,4 +1,6 @@
 ﻿@model List<Product>
+
+
 @foreach (var item in Model)
 {
     <div class="col-xl-3 col-md-4 col-sm-6">
@@ -31,7 +33,9 @@
                             </a>
                         </li>
                         <li>
-                            <a href="cart.html"
+                            <a asp-controller="Home"
+                                asp-action="AddBasket"
+                                asp-route-id="@item.Id"
                                data-tippy="Add to cart"
                                data-tippy-inertia="true"
                                data-tippy-animation="shift-away"
@@ -47,7 +51,7 @@
             <div class="product-content">
                 <a class="product-name" asp-controller="Flower" asp-action="Detail" asp-route-id="@item.Id">@item.Name</a>
                 <div class="price-box pb-1">
-                    <span class="new-price">$@item.Price</span>
+                    <pre class="new-price"> $@item.Price </pre>
                 </div>
                 <div class="rating-box">
                     <ul>
