--- a/P137Pronia/Views/_ViewImports.cshtml
+++ b/P137Pronia/Views/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using P137Pronia
 @using P137Pronia.Models
 @using P137Pronia.ViewModels.HomeVMs;
+@using P137Pronia.ViewModels.ProductVMs;
+@using P137Pronia.ViewModels.AuthVMs;
+@using P137Pronia.ViewModels.BasketVMs;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
