--- a/P137Pronia/Views/Flower/Index.cshtml
+++ b/P137Pronia/Views/Flower/Index.cshtml
@@ -2,6 +2,180 @@
 @{
     ViewData["Title"] = "Index";
 }
+@model GetShopVM
+<main class="main-content">
+    <div class="breadcrumb-area breadcrumb-height"
+         data-bg-image="assets/images/breadcrumb/bg/1-1-1919x388.jpg">
+        <div class="container h-100">
+            <div class="row h-100">
+                <div class="col-lg-12">
+                    <div class="breadcrumb-item">
+                        <h2 class="breadcrumb-heading">Shop</h2>
+                        <ul>
+                            <li>
+                                <a href="index.html">Home</a>
+                            </li>
+                            <li>Shop Default</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="shop-area section-space-y-axis-100">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-3 col-lg-4 order-2 order-lg-1 pt-5 pt-lg-0">
+                    <div class="sidebar-area">
+                        <form asp-action="Filter" method="post" class="widgets-area">
+                            <div class="widgets-searchbox">
+                                <div id="widgets-searchbox">
+                                    <input name="Search" class="input-field"
+                                           type="text"
+                                           placeholder="Search" />
+                                    <i class="widgets-searchbox-btn" type="submit">
+                                        <i class="fa fa-search"></i>
+                                    </i>
+                                </div>
+                            </div>
+                            <div class="widgets-item pt-0">
+                                <h2 class="widgets-title mb-4">Categories</h2>
+                                <ul class="widgets-category">
+                                    <li>
+                                        <input type="radio" class="d-none" id="cat-0" value="0" checked name="CategoryId">
+                                        <label for="cat-0">
+                                            <i class="fa fa-chevron-right"></i>
+                                            All <span>(@Model.ProductCount)</span>
+                                        </label>
+                                    </li>
+                                    @foreach (var item in Model.Categories)
+                                    {
+                                        <li>
+                                            <input id="cat-@item.Id" class="d-none" type="radio" value="@item.Id" name="CategoryId">
+                                            <label for="cat-@item.Id">
+                                                <i class="fa fa-chevron-right"></i>
+                                                @item.Name <span>(@item.ProductCategories.Count)</span>
+                                            </label>
+                                        </li>
+                                    }
+                                </ul>
+                            </div>
+                            <div class="widgets-item widgets-filter">
+                                <h2 class="widgets-title mb-4">Price Filter</h2>
+                                <div class="price-filter">
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <input class="form-control" placeholder="Min" type="number" name="MinPrice" />
+                                        </div>
+                                        <div class="col-6">
+                                            <input class="form-control col-6" placeholder="Max" type="number" name="MaxPrice" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="btn btn-pronia-primary btn-filter mt-5 w-100">Filter</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-xl-9 col-lg-8 order-1 order-lg-2">
+                    <div class="product-topbar">
+                        <ul>
+                            <li class="page-count">
+                                <span>12</span> Product Found of <span>@Model.ProductCount</span>
+                            </li>
+                            <li class="product-view-wrap">
+                                <ul class="nav" role="tablist">
+                                    <li class="grid-view" role="presentation">
+                                        <a class="active"
+                                           id="grid-view-tab"
+                                           data-bs-toggle="tab"
+                                           href="#grid-view"
+                                           role="tab"
+                                           aria-selected="true">
+                                            <i class="fa fa-th"></i>
+                                        </a>
+                                    </li>
+                                    <li class="list-view" role="presentation">
+                                        <a id="list-view-tab"
+                                           data-bs-toggle="tab"
+                                           href="#list-view"
+                                           role="tab"
+                                           aria-selected="true">
+                                            <i class="fa fa-th-list"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="short">
+                                <select class="nice-select">
+                                    <option value="1">Sort by Default</option>
+                                    <option value="2">Sort by Popularity</option>
+                                    <option value="3">Sort by Rated</option>
+                                    <option value="4">Sort by Latest</option>
+                                    <option value="5">Sort by High Price</option>
+                                    <option value="6">Sort by Low Price</option>
+                                </select>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="tab-content">
+                        <div class="tab-pane fade show active"
+                             id="grid-view"
+                             role="tabpanel"
+                             aria-labelledby="grid-view-tab">
+                            <div class="product-grid-view products row g-y-20">
+                               <partial name="_ProductFilterPartial" model="Model.Products">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pagination-area">
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination justify-content-center">
+                                <li class="page-item active">
+                                    <a class="page-link" href="#">1</a>
+                                </li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#">2</a>
+                                </li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#">3</a>
+                                </li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#" aria-label="Next">&raquo;</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
 
-<h1>Index</h1>
-
+@section scripts{
+    <script>
+        $(".widgets-area").on("submit", function (event) {
+            event.preventDefault();
+            var datas = $(this).serialize();
+            var action = $(this).attr('action');
+            $.ajax({
+                type: "POST",
+                url: action,
+                data: datas,
+                dataType: "json",
+                success: function (data) {
+                    console.log(data.responseText)
+                },
+                error: function (e) {
+                    if(e.responseText.trim().length > 0)
+                    {
+                        $('.products').html(e.responseText)
+                    }
+                    else{
+                        $('.products').html('<h2 class="text-center">No product founded</h2>')
+                    }
+                }
+            });
+        });
+    </script>
+}
